# FAIR

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  CHANGELOG.md  COMPONENTS.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  backend.py  frontend.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  data-quality.yml
audit/: change_log.md  function_inventory.json  function_inventory.py  seeds.yml
backend/: __init__.py  crud.py  database.py  models.py  schemas.py  server.py
backend/tests/: conftest.py  test_api.py  test_crud.py
configs/: api_keys.yml  goals.yml  params.yml  testfolio_presets.yml  thresholds.yml
docs/: ARCHITECTURE.md  CONFIG.md  CONTRIBUTING.md  DATA.md  DATA_SOURCES.md  DESIGN_SYSTEM.md  FAIR-III.md  GUI.md  OBSERVABILITY.md  PLUGINS.md  QA.md  REPORTS.md  ROADMAP.md  TROUBLESHOOTING.md  VALIDATE.md  prompt-cheatsheet.md  roadmap.md
fair3/: README.md  __init__.py
fair3/cli/: README.md  __init__.py  main.py
fair3/engine/: README.md  __init__.py  gui.py  logging.py  validate.py
fair3/engine/allocators/: README.md  __init__.py  constraints.py  erc.py  gen_a.py  gen_b_hrp.py  gen_c_dro.py  gen_d_cvar_erc.py  meta.py  objectives.py  pipeline.py
fair3/engine/brokers/: README.md  __init__.py  base.py  registry.py  trade_republic.py
fair3/engine/estimates/: README.md  __init__.py  bl.py  drift.py  mu.py  pipeline.py  sigma.py
fair3/engine/etl/: README.md  __init__.py  calendar.py  cleaning.py  fx.py  make_tr_panel.py  qa.py
fair3/engine/execution/: README.md  __init__.py  costs.py  decide.py  lotting.py  taxes_it.py  trade_rules.py
fair3/engine/factors/: README.md  __init__.py  core.py  orthogonality.py  pipeline.py  validation.py
fair3/engine/goals/: README.md  __init__.py  mc.py
fair3/engine/gui/: __init__.py  main.py  mainwindow.py
fair3/engine/infra/: __init__.py  paths.py  secrets.py
fair3/engine/ingest/: README.md  __init__.py  alpha.py  alphavantage.py  aqr.py  binance.py  bis.py  boe.py  cboe.py  coingecko.py  curvo.py  ecb.py  eodhd.py  fred.py  french.py  (+12 more)
tests/: conftest.py
tests/integration/: test_qa_pipeline.py
tests/property/: test_allocators_erc.py  test_block_bootstrap_property.py  test_checksums.py  test_eb_lower_bound_property.py  test_etl_no_lookahead.py  test_execution_no_trade.py  test_factors_orthogonality_property.py  test_goals_mc_property.py  test_mapping_liquidity_property.py  test_psd.py  test_regime_hysteresis_property.py  test_reporting_metrics_property.py  test_robustness_bootstrap_property.py  test_sigma_spd_median.py
tests/unit/: test_allocators_primitives.py  test_alpha_fetcher.py  test_alphavantage_fetcher.py  test_aqr_fetcher.py  test_binance_fetcher.py  test_bis_fetcher.py  test_boe_csv_offline.py  test_boe_html_error.py  test_cboe_fetcher.py  test_cli_etl.py  test_cli_execute.py  test_cli_goals.py  test_cli_ingest.py  test_cli_pipeline.py  test_cli_regime.py  test_cli_report.py  test_coingecko_fetcher.py  test_curvo_fetcher.py  test_ecb_fetcher.py  test_eodhd_fetcher.py  test_etl_calendar.py  test_etl_cleaning.py  test_etl_dedup.py  test_etl_fx.py  test_etl_panel.py  test_etl_qa.py  test_execution_primitives.py  test_execution_taxes_it.py  test_factors_core.py  test_factors_orthogonality.py  test_factors_validation.py  test_fred_csv_zip_offline.py  test_fred_defaults.py  test_fred_fetcher.py  test_fred_fetcher_offline.py  test_fred_html_error.py  test_fred_json_offline.py  test_french_fetcher.py  test_function_inventory.py  test_generators.py  (+45 more)
(+49 files in other folders)
