[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair3"
version = "0.1.0"
description = "FAIR-III Portfolio Engine (minimal, local, Windows-friendly)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "numpy", "pandas", "pyarrow", "scipy", "cvxpy", "scikit-learn",
  "pyyaml", "requests", "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "ruff", "black", "pre-commit", "mypy"]

[project.scripts]
fair3 = "fair3.cli.main:main"

[tool.black]
line-length = 100
