[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair3"
version = "0.2.0"
description = "FAIR-III Portfolio Engine (minimal, local, Windows-friendly)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "numpy", "pandas", "pyarrow", "scipy", "cvxpy", "scikit-learn",
  "pyyaml", "requests", "matplotlib", "pydantic>=2.5", "tqdm", "hmmlearn",
  "reportlab>=4.1", "pdfplumber"
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "ruff", "black", "pre-commit", "mypy"]

[project.scripts]
fair3 = "fair3.cli.main:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "D"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D203",
  "D205",
  "D213",
  "D401",
  "D405",
  "D411",
  "D412",
  "D416",
  "ANN101",
  "ANN102",
  "ANN202",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
