[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair3"
version = "0.2.0"
description = "FAIR-III Portfolio Engine (minimal, local, Windows-friendly)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "numpy", "pandas", "pyarrow", "scipy", "cvxpy", "scikit-learn",
  "pyyaml", "requests", "matplotlib", "pydantic>=2.5", "tqdm", "hmmlearn",
  "reportlab>=4.1", "pdfplumber"
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "ruff", "black", "pre-commit", "mypy"]
gui = ["PySide6>=6.6", "keyring>=24.0"]

[project.scripts]
fair3 = "fair3.cli.main:main"
fair3-gui = "fair3.engine.gui.main:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D203",
  "D205",
  "D213",
  "D401",
  "D405",
  "D411",
  "D412",
  "D416",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true
pretty = true
files = [
  "fair3/engine/brokers",
  "fair3/engine/universe",
  "fair3/cli/main.py",
]

[[tool.mypy.overrides]]
module = [
  "requests",
  "yaml",
  "pandas",
  "pandas.*",
  "numpy",
  "numpy.*",
  "sklearn.*",
  "tqdm.*",
  "hmmlearn.*",
  "reportlab.*",
  "pyarrow.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fair3.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "fair3.engine.brokers",
  "fair3.engine.brokers.*",
  "fair3.engine.universe",
  "fair3.engine.universe.*",
  "fair3.cli.main",
]
ignore_errors = false

[tool.pytest.ini_options]
testpaths = ["tests"]
